# data-enrichment

./: .env.example  README.md  langgraph.json  pyproject.toml  setup.py
.github/workflows/: integration-tests.yml
ntbk/: testing.ipynb
react_agent/: graph.py
react_agent/utils/: configuration.py  state.py  tools.py  utils.py
src/enrichment_agent/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py  utils.py
tests/casettes/: 48fccba2-fb6a-440c-96da-4439d876cf5e.yaml
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py
